feat: v0.2.0